--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/brain.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MatchMate AI - Resume Analyzer & Job Matcher</title>
+    <title>JobIntel AI - Resume Analyzer & Job Matcher</title>
     <meta name="description" content="AI-powered resume analysis and job matching platform. Upload your resume and get personalized job recommendations." />
   </head>
   <body>
